Puts logo in Nav bar and fixes JS for Nav bar collapse and text replacement.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,6 +3,23 @@
     background-color: #ebebeb;
 }
 
+.verticalgap {
+    display: block;
+    height: 50px;
+}
+
+.navbar-brand > img {
+    position: relative;
+    vertical-align: text-top;
+    display: inline;
+    margin: -7px 10px 5px 0px;
+    height: 38px;
+    line-height: 35px;
+}
+
+.navbar-brand > strong {
+    text-shadow: 2px 2px 2px #999999;
+}
 .companyName h1 {
     text-shadow: 2px 2px 2px #5f5f5f;
 }
